--- a/assets/css/sm-admin.css
+++ b/assets/css/sm-admin.css
@@ -310,3 +310,50 @@ input:checked + .smarty-slider:before {
 .smarty-toggle-switch label {
     display: block; /* Ensure label wraps correctly */
 }
+
+/*--------------------------------------------------------------
+    FAQs on posts
+--------------------------------------------------------------*/
+.sm-magazine-custom-faq {
+    margin-bottom: 20px;
+    padding: 15px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #f9f9f9;
+}
+
+.sm-magazine-custom-faq.even { 
+    background-color: #fff; 
+}
+
+.sm-magazine-faq-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    cursor: pointer;
+    border-bottom: 1px solid #ccc;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+}
+
+.sm-magazine-faq-content {
+    display: none;
+}
+
+.sm-magazine-faq-content p {
+    margin-top: 10px;
+}
+
+.sm-magazine-faq-item {
+    margin-bottom: 15px;
+}
+
+.sm-magazine-faq-question {
+    cursor: pointer;
+    font-weight: bold;
+    color: #0073aa;
+}
+
+.sm-magazine-faq-answer {
+    margin-top: 10px;
+}
