Add Dictionary custom post type and related article functionality; update theme metadata in style.css

--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /**
  * Theme Name: 		SmartyMagazine
- * Theme URI: 		https://github.com/mnestorov/smarty-magazine
- * Author: 			Martin Nestorov
- * Author URI: 		https://github.com/mnestorov
- * Description: 	SmartyMagazine is a professional looking WordPress News and Magazine theme. Theme is build with Bootstrap and is fully responsive for all the screen sizes. It includes theme customizer to customize and setup basic settings logo, color, and layouts. You can have 6 different news layouts, social icons and news ticker widgets to create beautiful homepage and do support different advertisement banner size.
+ * Theme URI: 		https://smartystudio.net
+ * Author: 			Martin Nestorov @ Smarty Studio
+ * Author URI: 		https://smartystudio.net
+ * Description: 	SmartyMagazine is a professional looking WordPress News and Magazine theme. Theme is build with Bootstrap 5 and is fully responsive for all the screen sizes. It includes theme customizer to customize and setup basic settings logo, color, and layouts. You can have 6 different news layouts, social icons and news ticker widgets to create beautiful homepage and do support different advertisement banner size.
  * Version: 		1.0.0
  * License: 		GPL-2.0+
  * License URI: 	http://www.gnu.org/licenses/gpl-2.0.txt
