--- a/assets/css/sm-front.css
+++ b/assets/css/sm-front.css
@@ -1562,11 +1562,11 @@ button.sm-sec-nav:hover {
 
 .widget-title.filter-inside h2 {
     margin: 0;
-    font-size: 1.5rem; /* Adjust the font size if needed */
+    font-size: 1.5rem;
 }
 
 .widget-title .view-all-link a {
-    font-size: 0.9rem; /* Slightly smaller font for the link */
+    font-size: 0.8rem; /* Slightly smaller font for the link */
     text-decoration: none;
 }
 
